# nixos-config

./: Makefile  flake.nix  muqadma-test-public-age-key.txt
conf/doom.d/: config.el  init.el  packages.el
hardware/: vm-aarch64.nix  vm-x86_64.nix
lib/: mkvm.nix
machines/: vm-aarch64.nix  vm-shared.nix  vm-x86_64.nix
modules/: vmware-guest.nix
users/faezs/: desktop.nix  home-manager.nix  nixos.nix
users/faezs/xmonad-conf/: Main.hs  default.nix  overlay.nix  xmonad-conf.cabal
